<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gifImageView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/doppio_one"
            android:text="@string/back"
            android:textColor="@color/text_color"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/doppio_one"
            android:text="@string/mobile_back"
            android:textColor="@color/text_color"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView2"
        android:layout_width="305dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/login_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></pl.droidsonroids.gif.GifImageView>

    <LinearLayout
        android:id="@+id/otp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Otp_text"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/get_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/otp_text"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/input_code1"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/input_code2"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/input_code3"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/input_code4"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/input_code5"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/input_code6"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <TextView
        android:id="@+id/resend_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/resend_click"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/Otp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resend_click">

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/buttonbox"
            android:fontFamily="@font/doppio_one"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/back_button_tint" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>